Option to not fetch proposed
